# graphkit-learn

./: .actrc  .appveyor.yml  .coveragerc  .gitignore  .readthedocs.yml  .travis.yml  CMakeLists.txt  Problems.md  README.md  crowdin.yml  generate_reference_md.py  mkdocs.yml  pyproject.toml  requirements-docs.txt  requirements.txt  requirements_pypi.txt  run_cyclic.py  setup.py  version_provider.py
.github/ISSUE_TEMPLATE/: issue-template.md
.github/workflows/: docs.yml  github-actions-centos.yml  github-actions-centos.yml_tmp  github-actions-ubuntu.yml  github-actions.yml
.ipynb_checkpoints/: run_weisfeilerLehmankernel_acyclic-checkpoint.ipynb
c_ext/: lsape_binders.py
datasets/: ds.py
datasets/Acyclic/: 1,1-bis(isopropylthio)ethane.ct  1,1-bis(methylthio)ethane.ct  1,1-dimethoxy-2,2-dimethylpentane.ct  1,1-dimethoxy-2-methylpropane.ct  1,1-dipropoxyethane.ct  1,2-bis(methylthio)ethane.ct  1,2-dimethoxyethane.ct  1,2-dimethoxypropane.ct  1,2-dimethylpropyl_methyl_ether.ct  1,3-diethoxypropane.ct  1,3-diisopropoxypropane.ct  1,3-dimethoxypropane.ct  1,4-diethoxybutane.ct  1,4-dimethoxybutane.ct  1,4-dimethoxypentane.ct  1-ethoxy-4-methoxybutane.ct  1-ethyl-1,3-dimethylbutyl_methyl_ether.ct  1-methoxy-1-propoxyethane.ct  2,2-bis(propylthio)propane.ct  (+65 more)
docs/: conf.py  index.rst  modules.rst  pygraph.utils.rst  requirements.txt
ged/: GED.py  bipartiteGED.py  costfunctions.py
gklearn/: __init__.py
gklearn/gedlib/: .gitignore  CMakeLists.txt  README.rst  __init__.py  bind_errors.py  common_bind.pxd  common_bind.pyx  gedlibpy.cpp  gedlibpy.py  gedlibpy.pyx  gedlibpy2.pyx  gedlibpy_attr.pyx  gedlibpy_gxl.pxd  gedlibpy_gxl.pyx  librariesImport.py  libraries_import.py  pyproject.toml  refactor_log.md  setup.py  setup_core.py  setup_simple.py  test.py
gklearn/gedlib/documentation/source/: conf.py
gklearn/gedlib/include/fann/: fann_activation.h  fann_cpp.h  fann_data.h
gklearn/gedlib/include/libsvm.3.22/: Makefile
gklearn/gedlib/include/lsape/: lsap.h  lsape.h
gklearn/gedlib/include/lsape/dev/: deftypes.h  enum-ec-matchings.h  enum-matchings.h  enum-matchings.tpp  greedy-cost-sort.h  greedy-lsap.h  greedy-lsape.h  hungarian-lsap.h  hungarian-lsape.h  stoch.h  utils.h
gklearn/gedlib/include/lsape/tmp/: AuctionLSAP.h  GaussSeidelAuctionLSAP.h  JacobiAuctionLSAP.h  RandomAllPerfectMatchingsEC.h  ec-matching.h
gklearn/gedlib/include/nomad/: Barrier.cpp  Barrier.hpp  Cache.cpp  Cache.hpp  Cache_File_Point.cpp  Cache_File_Point.hpp  Cache_Point.cpp  Cache_Point.hpp  Cache_Search.cpp  Cache_Search.hpp  Clock.cpp  Clock.hpp  Direction.cpp  Direction.hpp  Directions.cpp  Directions.hpp  Display.cpp  Display.hpp  Double.cpp  Double.hpp  Eval_Point.cpp  Eval_Point.hpp  Evaluator.cpp  Evaluator.hpp  Evaluator_Control.cpp  Evaluator_Control.hpp  Exception.cpp  Exception.hpp  Extended_Poll.cpp  Extended_Poll.hpp  Filter_Point.hpp  GMesh.cpp  GMesh.hpp  LH_Search.cpp  LH_Search.hpp  L_Curve.cpp  L_Curve.hpp  Mads.cpp  Mads.hpp  Model_Sorted_Point.cpp  (+69 more)
gklearn/gedlib/include/sgtelib/: Defines.hpp  Exception.hpp  Kernel.cpp  Kernel.hpp  Matrix.cpp  Matrix.hpp  Surrogate.cpp  Surrogate.hpp  Surrogate_CN.cpp  Surrogate_CN.hpp  Surrogate_Ensemble.cpp  Surrogate_Ensemble.hpp  Surrogate_Factory.cpp  Surrogate_Factory.hpp  Surrogate_KS.cpp  Surrogate_KS.hpp  Surrogate_Kriging.cpp  Surrogate_Kriging.hpp  Surrogate_LOWESS.cpp  Surrogate_LOWESS.hpp  Surrogate_PRS.cpp  Surrogate_PRS.hpp  Surrogate_PRS_CAT.cpp  Surrogate_PRS_CAT.hpp  Surrogate_PRS_EDGE.cpp  Surrogate_PRS_EDGE.hpp  Surrogate_Parameters.cpp  Surrogate_Parameters.hpp  Surrogate_RBF.cpp  Surrogate_RBF.hpp  Surrogate_Utils.cpp  Surrogate_Utils.hpp  Tests.cpp  Tests.hpp  TrainingSet.cpp  TrainingSet.hpp  header.txt  makefile  sgtelib.cpp  sgtelib.hpp  (+2 more)
gklearn/gedlib/lib/fann/: libfloatfann.so.2.2.0
gklearn/gedlib/lib/fann/pkgconfig/: fann.pc
gklearn/gedlib/lib/libsvm.3.22/: svm.cpp
gklearn/gedlib/single_dlib_version_bk/: gedlibpy_attr.pxd  gedlibpy_attr.pyx  gedlibpy_gxl.pxd  gedlibpy_gxl.pyx
gklearn/gedlib/src/: GedLibBind.hpp  GedLibBind.ipp  GedLibBindAttr.hpp  GedLibBindAttr.ipp  GedLibBind_bk.hpp  GedLibBind_bk.ipp  gedlib_bind.hpp  gedlib_bind_attr.hpp  gedlib_bind_attr.ipp  gedlib_bind_gxl.cpp  gedlib_bind_gxl.hpp  gedlib_bind_gxl.ipp  gedlib_bind_util.hpp  gedlib_header.hpp
gklearn/gedlib/src/single_so_version_bk/: gedlib_bind_attr.cpp  gedlib_bind_attr.hpp  gedlib_bind_gxl.cpp  gedlib_bind_gxl.hpp  gedlib_bind_util.cpp  gedlib_bind_util.hpp  gedlib_header.hpp
notebooks/: check_gm.py  check_gm_gstsp.py  draw_datasize_vs_chunksize.py  draw_gm.py  draw_running_time.py  get_dataset_attributes.ipynb  get_dataset_attributes.py  job_graphkernels.sl  kernelmatrix.ds  libs.py  memory_profile.ipynb  paths.py  plot_all_graphs.ipynb  py-graph_test.ipynb  run_WeisfeilerLehmankernel_acyclic.ipynb  run_commonwalkkernel.ipynb  run_commonwalkkernel.py  run_cyclicpatternkernel.ipynb  run_degree_differs_cw.py  run_degree_differs_ma.py  run_degree_differs_rw.py  run_degree_differs_sp.py  run_degree_differs_ssp.py  run_degree_differs_uhp.py  run_marginalizedkernel.ipynb  run_marginalizedkernel.py  run_marginalizedkernel_acyclic.ipynb  run_pathkernel.ipynb  run_pathkernel_acyclic.ipynb  run_randomwalkkernel.ipynb  run_randomwalkkernel.py  run_rwalk_symonly.py  run_spkernel.ipynb  run_spkernel.py  run_spkernel_acyclic.ipynb  run_ssp_symonly.py  run_structuralspkernel.ipynb  run_structuralspkernel.py  run_treeletkernel.ipynb  run_treeletkernel.py  (+24 more)
preimage/: find_best_k.py  fitDistance.py  ged.py  gk_iam.py  iam.py  librariesImport.py  librariesImport2.py  median.py  pathfrequency.py  preimage.py  preimage_iam.py  preimage_random.py  run_gk_iam.py  setup.py  test.py  test_fitDistance.py  test_iam.py  test_k_closest_graphs.py  test_others.py  test_preimage_iam.py  test_preimage_mix.py  test_preimage_random.py  test_random_mutag.py  utils.py  xp_letter_h.py
pygraph/: __init__.py  model.py
tests/: README.md  opt.py  requirements.txt  tests_tools.py
(+1868 files in other folders)
