[project]
name = "graphkit-learn"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "control>=0.10.1",
    "cvxopt>=1.3.2",
    "cvxpy>=1.6.5",
    "cython>=0.29.37",
    "matplotlib>=3.10.3",
    "mosek>=11.0.20",
    "networkx>=3.4.2",
    "numpy>=2.2.6",
    "pip>=25.1.1",
    "scikit-learn>=1.6.1",
    "scipy>=1.15.3",
    "setuptools>=80.8.0",
    "tabulate>=0.9.0",
    "tqdm>=4.67.1",
]
