[build-system]
requires = ["scikit-build-core>=0.5.0", "wheel", "setuptools>=42", "cmake>=3.18", "cython>=0.29.0", "numpy"]
build-backend = "scikit_build_core.build"

[project]
name = "gedlibpy"
version = "0.1.0"
authors = [
    {name = "Lambert Natacha and Linlin Jia", email = "linlin.jia@unibe.ch"},
]
description = "A Python wrapper library for C++ library GEDLIB of graph edit distances"
readme = "README.rst"
license = {text = "GNU General Public License v3 (GPLv3)"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
]
requires-python = ">=3.11"

[project.urls]
Source = "https://github.com/jajupmochi/graphkit-learn/tree/master/gklearn/gedlib"
Tracker = "https://github.com/jajupmochi/graphkit-learn/issues"

[tool.scikit-build]
wheel.expand-macos-universal-tags = true
cmake.minimum-version = "3.18"
build-dir = "build/{wheel_tag}"
cmake.verbose = true